--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "hbs": "^4.0.4",
     "path": "^0.12.7",
