--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node serve_html/app.js",
-    "dev": "nodemon serve_html/app.js"
+    "start": "node -r dotenv/config serve_html/app.js",
+    "dev": "nodemon -r dotenv/config serve_html/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "hbs": "^4.0.4",
     "path": "^0.12.7",
     "request": "^2.88.0"
   },
   "devDependencies": {
+    "dotenv": "^8.1.0",
     "nodemon": "^1.19.2"
   }
 }
